# sec-filing-rag

./: .gitignore  README.md  app.py  pyproject.toml
data/eval/: questions.json  retrieval_eval_results.json
scripts/: run_eval.py
src/: chunker.py  config.py  downloader.py  embedder.py  evaluate.py  generator.py  indexer.py  parser.py  pipeline.py  retriever.py
tests/: conftest.py  test_chunker.py  test_evaluate.py  test_generator.py  test_parser.py  test_retriever.py
