[project]
name = "sec-filing-rag"
version = "0.1.0"
description = "Production-grade RAG over SEC 10-K filings with hybrid search and citations"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.12.0",
    "chromadb>=0.5.0",
    "datasets>=2.14.0",
    "lxml>=5.0.0",
    "rank-bm25>=0.2.2",
    "ragas>=0.1.0",
    "sec-edgar-downloader>=5.0.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.30.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
